# hooty

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  README_ja.md  pyproject.toml
.github/workflows/: release.yml
docs/: agents_spec.md  architecture_spec.md  cli_spec.md  config_spec.md  context_spec.md  hooks_spec.md  memory_spec.md  non_interactive_spec.md  provider_spec.md  setup_guide.md  skills_spec.md  tools_spec.md  user_guide.md
packaging/: boot_hooty.py  build.ps1  build.sh  hooty.spec
packaging/hooks/: hook-botocore.py
samples/: banner_preview.py  compare_token_counts.py  review_mock.py  rich_prompt_demo.py  ui_ask_user_improved_mock.py  ui_confirm_mock.py
scripts/: update_model_catalog.py  update_notice.sh
src/hooty/: __init__.py  agent_factory.py  agent_store.py  attachment.py  attachment_picker.py  capture.py  clipboard.py  concurrency.py  config.py  context.py  conversation_log.py  credentials.py  file_picker.py  file_snapshot.py  hooks.py  hooks_picker.py  main.py  mcp_picker.py  memory_picker.py  memory_store.py  model_catalog.py  model_picker.py  oneshot.py  pkg_manager.py  plan_picker.py  plan_store.py  project_purge_picker.py  project_store.py  prompt_store.py  providers.py  purge_picker.py  repl.py  repl_ui.py  review.py  (+10 more)
tests/: conftest.py  test_agent_store.py  test_apply_patch.py  test_attachment.py  test_capture.py  test_clipboard.py  test_coding_tools.py  test_concurrency.py  test_concurrent_db.py  test_config.py  test_context.py  test_credentials.py  test_file_snapshot.py  test_hooks.py  test_mcp_add_remove.py  test_mcp_config.py  test_mcp_tools.py  test_memory_store.py  test_model_catalog.py  test_owl_eyes.py  test_pkg_manager.py  test_plan_handoff.py  test_plan_store.py  test_plan_tools.py  test_project_store.py  test_prompt_store.py  test_providers.py  test_repl_skill_shortcut.py  test_review.py  test_search_tools.py  test_session_lock.py  test_session_picker.py  test_session_stats.py  test_session_store.py  test_skill_creator.py  test_skill_store.py  test_sub_agent_tools.py  test_text_utils.py  test_ui.py
(+54 files in other folders)
